--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1,15 +1,18 @@
 *{
     margin: 0;
     padding: 0;
-   
+}
+.body{
+    background-color: rgb(89, 94, 94);
 }
 .card2{
     margin: auto;
     margin-top: 80px;
+    
 }
 .card1{
     margin: auto;
-    margin-top: 150px;
+    margin-top: 100px;
 }
 .ke{
     padding-bottom: 30px;
